--- a/blackboard.html
+++ b/blackboard.html
@@ -1,13 +1,12 @@
 <head>
-  <title>blackboard</title>
+  <title>Blackboard</title>
 </head>
 
 <body>
-  {{> hello}}
+  {{> board}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="board">
+  <canvas id="board"></canvas>
+  <input id="reset" type="button" value="Reset" />
 </template>
